--- a/default.html
+++ b/default.html
@@ -320,13 +320,35 @@
 
       </section>
 
+      <!-- ! END OF REVIEW SECTION -->
+      <section class="bg-text-900 pt-5">
+        <div class="container-small">
+          <div class="row" id="contact">
+            <h5 class="mb-2">Get to know us</h5>
+            <h1 class="text-danger" style="font-family: 'Varela Round', sans-serif; letter-spacing: 2px;">Rovelyf Coaching</h1>
+            <p class="fw-medium">Things you have to know about inside Rovelyf Online life coaching and consultation.</p>
+            <div class="col-md-6 mb-5 text-start overflow-hidden" style="max-height: 500px;">
+              <div class="d-flex overflow-hidden">
+                <img src="./public/assets/img/company/owner.png" alt="" style="border-radius: 2rem;" width="100%">
+              </div>
+            </div>
 
+            <!-- TODO: End of left container -->
+            <div class="col-md-5 text-start text-md-start ps-3 ms-3" style="border-left: 2px solid rgba(0, 0, 0, 0.47); max-height: 500px;" id="drop">
+              <h3 class=" mb-0 text-danger fw-bold fs-2" style="font-family: 'Varela Round', sans-serif; letter-spacing: 2px;">Rovilyn Dayton</h3>
+              <p class="mb-2 fw-medium fs-1">Life Coach and Consultant.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ! END OF ROVE SECTION -->
       <section class="bg-text-900 pt-5">
         <div class="container-small px-lg-7 px-xxl-3">
           <div class="row g-5 g-lg-5" id="contact">
             <div class="col-md-6 mb-5 mb-md-0 text-start text-md-start">
               <h3 class="mb-2 text-danger">Stay connected</h3>
-              <p class="mb-5">Rovilyn Dayton is available for your necessities at all times.</p>
+              <p class="mb-2">Rovilyn Dayton is available for your necessities at all times.</p>
               <div class="d-flex flex-column align-items-start align-items-md-start gap-4 gap-md-0">
                 <div class="d-md-flex align-items-center">
                   <div class="icon-wrapper">
@@ -394,7 +416,8 @@
                         <ul class="list-unstyled mb-3">
                           <li class="mb-1"><a class="hover-text-danger text-white" href="#">Home</a></li>
                           <li class="mb-1"><a class="hover-text-100 text-white" href="#servicessection">Services</a></li>
-                          <li class="mb-1"><a class="hover-text-100 text-white" href="#team">About us</a></li>
+                          <li class="mb-1"><a class="hover-text-100 text-white" href="#reviewsection">Reviews</a></li>
+                          <li class="mb-1"><a class="hover-text-100 text-white" href="#rovesection">About us</a></li>
                           <li class="mb-1"><a class="hover-text-100 text-white" href="#contact">Contact</a></li>
                         </ul>
                       </div>
@@ -446,7 +469,7 @@
             <div class="position-relative">
               <label class="stretched-link" for="businessPlus"></label>
               <div class="d-flex align-items-sm-center pb-2">
-                <h4>Package Promo</h4><span class="fas fa-star fs-sm px-1" style="color: rgb(255, 217, 0);"></span>
+                <h4 class="text-danger">Package Promo</h4><span class="fas fa-star fs-sm px-1" style="color: rgb(255, 217, 0);"></span>
               </div>
               <div class="card h-100 overflow-hidden cursor-pointer bg-warning-soft-warning warning-boxshadow pricing-business-plus">
                 <div class="bg-holder d-dark-none" style="background-image:url(./public/assets/img/bg/bg-11.png);background-position:left bottom;background-size:auto;">
@@ -503,8 +526,8 @@
                 <div class="card-body d-flex flex-column justify-content-between position-relative">
                   <div class="d-flex justify-content-between">
                     <div class="mb-5 mb-md-0 mb-lg-5 me-3">
-                      <div class="d-sm-flex align-items-center mb-3">
-                        <h3 class="mb-0">GROUP SESSION</h3>
+                      <div class="d-sm-flex align-items-center mb-2">
+                        <h4 class="mb-0">GROUP SESSION</h4>
                       </div>
                       <h5 class="text-warning">6 Sessions + 1</h5>
                       <p class="fs--1 text-700">For people who feel more comfortable <br> on session together with other people.</p>
@@ -531,19 +554,21 @@
           </div>
         </div>
 
-        <div class="container-small bg-light-danger p-2 rounded">
+        <div class="container-small bg-light-warning p-2 rounded">
           <div class="d-flex align-items-center ms-3 mt-1">
-            <h5>Book on the Spot Sessions <span class="fas fa-calendar-check"></span> </h5>
+            <h5 class="text-danger">Book on the Spot Sessions<span class="fas fa-calendar-check ms-2"></span> </h5>
           </div>
           <div class="row px-3">
             <div class="col p-2">
               <div class="card p-3">
-                <p class="fw-bold">Solo Coaching <span class="fas fa-user-circle"></span></p>
+                <p class="fw-medium fs--1">Solo Coaching <span class="fas fa-user-circle"></span></p>
+                <p></p>
               </div>
             </div>
             <div class="col p-2">
               <div class="card p-3">
-                <p class="fw-bold">Group Coaching</p>
+                <p class="fw-medium fs--1">Group Coaching <span class="fas fa-user-friends"></span></p>
+                <p></p>
               </div>
             </div>
           </div>
