--- a/default.html
+++ b/default.html
@@ -334,9 +334,13 @@
             </div>
 
             <!-- TODO: End of left container -->
-            <div class="col-md-5 text-start text-md-start ps-3 ms-3" style="border-left: 2px solid rgba(0, 0, 0, 0.47); max-height: 500px;" id="drop">
-              <h3 class=" mb-0 text-danger fw-bold fs-2" style="font-family: 'Varela Round', sans-serif; letter-spacing: 2px;">Rovilyn Dayton</h3>
-              <p class="mb-2 fw-medium fs-1">Life Coach and Consultant.</p>
+            <div class="col-md-5 text-start text-md-start ps-3 ms-3" style="max-height: 500px;" id="drop">
+              <div class="row" style="border-left: 2px solid black;">
+                <h3 class=" mb-0 text-danger fw-bold fs-2" style="font-family: 'Varela Round', sans-serif; letter-spacing: 2px;">Rovilyn Dayton</h3>
+                <p class="mb-2 fw-medium fs-1">Life Coach and Consultant.</p>
+              </div>
+                <q class="fs--1">Experienced and passionate life coach dedicated to helping you unlock your full potential. With a focus on personal growth, empowerment, and positive transformation, I provide tailored guidance to navigate life's challenges. Let's embark on a journey of self-discovery together, where we'll set clear goals, overcome obstacles, and achieve lasting fulfillment. Your brighter future starts here with Rovilyn Dayton, your partner in personal and professional success</q>
+              
             </div>
           </div>
         </div>
