--- a/default.html
+++ b/default.html
@@ -321,26 +321,42 @@
       </section>
 
       <!-- ! END OF REVIEW SECTION -->
-      <section class="bg-text-900 pt-5">
+      <section class="bg-text-900 pt-5" id="rovesection">
         <div class="container-small">
           <div class="row" id="contact">
             <h5 class="mb-2">Get to know us</h5>
             <h1 class="text-danger" style="font-family: 'Varela Round', sans-serif; letter-spacing: 2px;">Rovelyf Coaching</h1>
             <p class="fw-medium">Things you have to know about inside Rovelyf Online life coaching and consultation.</p>
-            <div class="col-md-6 mb-5 text-start overflow-hidden" style="max-height: 500px;">
+            <div class="col-md-6 mb-5 text-start overflow-hidden" style="max-height: auto;">
               <div class="d-flex overflow-hidden">
-                <img src="./public/assets/img/company/owner.png" alt="" style="border-radius: 2rem;" width="100%">
+                <img src="./public/assets/img/generic/32.jpg" alt="" style="border-radius: 1rem;" width="100%">
               </div>
             </div>
 
             <!-- TODO: End of left container -->
-            <div class="col-md-5 text-start text-md-start ps-3 ms-3" style="max-height: 500px;" id="drop">
+            <div class="col-md-6 text-start text-md-start ps-3" id="drop">
               <div class="row" style="border-left: 2px solid black;">
-                <h3 class=" mb-0 text-danger fw-bold fs-2" style="font-family: 'Varela Round', sans-serif; letter-spacing: 2px;">Rovilyn Dayton</h3>
-                <p class="mb-2 fw-medium fs-1">Life Coach and Consultant.</p>
+                <div class="d-flex align-items-start justify-content-start">
+                  <img src="./public/assets/img/company/owner.png" class="rounded-1" width="100">
+                  <div class="ps-3">
+                    <h5 class="m-0 text-danger">Rovilyn Dayton</h5>
+                    <p class="mb-0 fw-medium fs--1">Life Coach and Consultant</p>
+                    <q class="fs--1">Experienced and passionate life coach dedicated to helping you unlock your full potential. With a focus on personal growth, empowerment, and positive transformation, I provide tailored guidance to navigate life's challenges. Let's embark on a journey of self-discovery together, where we'll set clear goals, overcome obstacles, and achieve lasting fulfillment. Your brighter future starts here with <strong>Rovilyn Dayton</strong>, your partner in personal and professional success.</q>
+                  
+                  </div>
+                </div>
               </div>
-                <q class="fs--1">Experienced and passionate life coach dedicated to helping you unlock your full potential. With a focus on personal growth, empowerment, and positive transformation, I provide tailored guidance to navigate life's challenges. Let's embark on a journey of self-discovery together, where we'll set clear goals, overcome obstacles, and achieve lasting fulfillment. Your brighter future starts here with Rovilyn Dayton, your partner in personal and professional success</q>
+              <div class="d-flex row justify-content-end pt-3 mt-3" style="border-right: 2px solid black;">
+                <div class="d-flex justify-content-end align-items-start">
+                  <div class="pe-3 text-end">
+                    <h5 class="m-0 text-danger">Life Coaching</h5>
+                    <p class="mb-0 fw-medium fs--1">Coaching that your life needs.</p>
+                    <q class="fs--1">Experience a transformative journey with life coaching — it's more than just advice or sharing problems. It's a systematical collaboration, self-discovery, and empowering you to reach a version of yourself you never thought you could be. Discover the difference with <strong>Rovilyn Dayton</strong> — where coaching is a dynamic partnership, guiding you to unlock your full potential and thrive in every aspect of your life!</q>
               
+                  </div>
+                  <img src="./public/assets/img/gallery/4.png" class="rounded-1" width="100">
+                </div>
+              </div>
             </div>
           </div>
         </div>
